UI fixes: z-index, background color

--- a/src/assets/style/colors.less
+++ b/src/assets/style/colors.less
@@ -17,3 +17,5 @@
 
 // z-index
 @z-notifications: 9000;
+@z-navbar: 1000;
+@z-modal: 2000;
